# axum_backend_example

./: .env.example  Cargo.toml  README.md
src/: app_state.rs  config.rs  errors.rs  handlers.rs  main.rs  models.rs
