[package]
name = "axum_backend_example"
version = "0.1.0"
edition = "2021"
default-run = "axum_backend_example"

[dependencies]
axum = "0.7.5"
axum-extra = "0.9.3"
constcat = "0.5.0"
dotenvy_macro = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.9.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
